--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -132,12 +132,12 @@ html, body{
   align-items: center;
   width: 100%;
   height: 100%;
-  transform: translateX(-100%);
+  transform: translateX(0);
   transition: transform 0.25s;
   z-index: 1;
   border-bottom: solid 3px black;
-
-  &:after {
+/* 
+  &::before {
     content: '';
     position: absolute;
     top: 0;
@@ -148,10 +148,10 @@ html, body{
     transform-origin: 0 50%;
     z-index: -1;
   }
-
+ */
   #logo{
     position: absolute;
-    left: 100%;
+    left: 0;
     bottom: 0;
     height: 100px;
     width: 100px;
@@ -167,83 +167,70 @@ html, body{
     display: none;
   }
   ul{
+    display: none;
     width: 100%;
-  }
-
-  li {
-    --border-size: 1vmin;
-    display: flex;
-    align-items: center;
-    position: relative;
-    overflow: hidden;
-    
-    &:after {
-      content: '';
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 1vmin;
-      background-color: $pastel;
-      transform-origin: 0 50%;
-      transform: translateX(-100%) skew(15deg);
+    li {
+      display: flex;
+      align-items: center;
+      position: relative;
+      overflow: hidden;
+      /* 
+      &::before {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        height: 1vmin;
+        background-color: $pastel;
+        transform-origin: 0 50%;
+        transform: translateX(112%) skew(15deg);
+      } */
     }
   }
+
   
-  /* a {
-    display: inline-block;
-    width: 100%;
-    max-width: 800px;
-    margin: 0 auto;
-    color: $fond;
-    line-height: 1;
-    text-decoration: none;
-    user-select: none;
-    padding: 1rem 2rem 1rem;
-    transform: translateY(100%);
-  } */
 
 }
 
-.nav-toggle:checked {
+#NavToggle{
+  display: none;
+}
+#NavToggle:checked {
+  display: none;
   
-  ~ .header{
-    background-color: blue;
-  }
   ~ .main{
-    transform: translateX(10%);
+    transform: translateX(-10%);
+    transition: all .35s ease-in-out;
   }
   
-  ~ .navbar {
-    transition-duration: 0s;
+   ~ .navbar {
+    grid-area: 1 / 1 / 4 / 4;
+    width: 100%;
+    height: 100%;
+    transition-duration: 0.35s;
     transform: translateX(0);
-    
-    &:after {
-      animation: nav-bg 0.25s cubic-bezier(0.215, 0.61, 0.355, 1) forwards;
-    }
-    
-    li:after {
-      animation: nav-line 1s cubic-bezier(0.215, 0.61, 0.355, 1) forwards;
-    }
-    
-    a {
-      animation: link-appear 1.5s cubic-bezier(0.215, 0.61, 0.355, 1) forwards;
-    }
-    
-    @for $i from 1 through 4 {
-      li:nth-child(#{$i}) {
-        &:after, a {
-          animation-delay: calc((var(--duration) / 2) * #{$i} * 0.125);
-        }
+    align-items: flex-start;
+    #nav-btn{
+      z-index: 2;
+      .menu-btn{
+        transform: translateX(0);
+        transition-duration: 0s;
+        top: 0;
       }
     }
+
+    #logo{
+      display: none;
+    }
+  
   }
 }
 
 .menu-btn{
   position: absolute;
   bottom: 0;
-  right: -100%;
+  right: 0;
   height: 80px;
   width: 80px;
   margin: 0;
@@ -261,7 +248,7 @@ html, body{
     height: 50px;
     width: 50px;
     background-color: transparent;
-    opacity: 0;
+    opacity: 0.5;
     cursor: pointer;
     margin: 1em;
   }
