--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,7 +33,7 @@
                 <ul class="menuItems">
                     
                     <li><a href="#">Qu'est ce que le don ?</a></li>
-                    <li><a href="#">Pourquoi ?</a></li>
+                    <li><a href={{path ('pourquoi')}}>Pourquoi ?</a></li>
                     <li><a href={{path ('comment')}}>Comment ?</a></li>
                     <li><a href={{path ('quand')}}> Quand ?</a></li>
                     <li><a href="#">Où ?</a></li>
