--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -64,8 +64,6 @@ html, body{
   margin-top: 2em;
   margin-bottom: 2em;
   background-color: $fond;
-  font-size: 400;
-  line-height: 20px;
   font-family: 'Hind Siliguri', sans-serif;
   h1{
     font-family: 'Karla', sans-serif;
@@ -78,7 +76,30 @@ html, body{
     font-size: 1.5em;
     margin-bottom: 1em;
   }
+
+  .cadre{
+    h2{
+      margin-top: 1em;
+    }
+    text-align: center;
+    margin: 4em;
+    border-top: solid 3px black;
+    border-bottom: solid 3px black;
+  }
+
+  .illustration{
+    margin: 2em;
+    margin-left: 0;
+    margin-top: 0;
+    width: 400px;
+    height: auto;
+    float: left;
+    border-radius: 15px;
+    box-shadow: 5px 5px 6px rgba(0,0,0,0.2);
+  }
   p{
+    line-height: 20px;
+    height: auto;
     margin-bottom: 2em;
   }
 }
@@ -134,8 +155,8 @@ html, body{
   height: 100%;
   transform: translateX(0);
   transition: transform 0.25s;
-  z-index: 1;
   border-bottom: solid 3px black;
+  background: $pastel;
 /* 
   &::before {
     content: '';
@@ -207,10 +228,12 @@ html, body{
    ~ .navbar {
     grid-area: 1 / 1 / 4 / 4;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     transition-duration: 0.35s;
     transform: translateX(0);
     align-items: flex-start;
+    background: $pastel;
+    z-index: 1;
     #nav-btn{
       z-index: 2;
       .menu-btn{
@@ -400,7 +423,7 @@ html, body{
   }
 
   .accordion{
-    width: 300px;
+    width: 400px;
     font-size: 1.25em;
   }
   
