--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -16,7 +16,7 @@ html, body{
   width: 100%;
 }
 
-
+// cadrillage page
 .grid{
   background-color: $fond;
   display: grid;
@@ -24,7 +24,7 @@ html, body{
   grid-template: auto 1fr auto / 12% auto 12%;
 }
 
-
+//header
 .header{
   height: 150px;
   grid-area: 1 / 1 / 2 / 4;
@@ -32,12 +32,14 @@ html, body{
   border-bottom: solid 3px black;
 }
 
+
+
+//scrollbar
 /* Works on Firefox */
 *{
   scrollbar-width: thin;
   scrollbar-color: $pastel $fond;
 }
-
 
 /* Works on Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
@@ -59,6 +61,8 @@ html, body{
   background-color: $pastelHover;
 }
 
+
+//main div
 .main{
   grid-area: 2 / 2 / 3 / 3;
   margin-top: 2em;
@@ -77,16 +81,19 @@ html, body{
     margin-bottom: 1em;
   }
 
+  //encadré
   .cadre{
     h2{
       margin-top: 1em;
     }
     text-align: center;
-    margin: 4em;
+    margin: 4em 0;
+    padding: 0 2em;
     border-top: solid 3px black;
     border-bottom: solid 3px black;
   }
 
+  //photo gauche paragraphe
   .illustration{
     margin: 2em;
     margin-left: 0;
@@ -97,6 +104,7 @@ html, body{
     border-radius: 15px;
     box-shadow: 5px 5px 6px rgba(0,0,0,0.2);
   }
+
   p{
     line-height: 20px;
     height: auto;
@@ -104,6 +112,8 @@ html, body{
   }
 }
 
+
+//footer
 .footer{
   height: 300px;
   grid-area: 3 / 1 / 4 / 4;
@@ -111,6 +121,7 @@ html, body{
   border-top: solid 3px black;
 }
 
+//contenu footer
 .footerContent{
   grid-area: 3 / 2 / 4 / 3;
   font-family: 'Hind Siliguri', sans-serif;
@@ -146,6 +157,8 @@ html, body{
   }
 }
 
+
+//navigation header
 .navbar{
   grid-area: 1 / 2 / 2 / 3;
   position: relative;
@@ -184,9 +197,13 @@ html, body{
       height: auto;
     }
   }
+
+  //réseaux sociaux
   .network{
     display: none;
   }
+
+  //liens de navigation
   ul{
     display: none;
     width: 100%;
@@ -214,6 +231,8 @@ html, body{
 
 }
 
+
+//affichage menu navigation
 #NavToggle{
   display: none;
 }
@@ -250,6 +269,8 @@ html, body{
   }
 }
 
+
+//btn menu de nav
 .menu-btn{
   position: absolute;
   bottom: 0;
@@ -278,6 +299,7 @@ html, body{
   
 }
 
+
 .menu-btn-burger{
   width: 50px;
   height: 6px;
@@ -287,6 +309,7 @@ html, body{
   box-shadow: 0 1px 3px rgba(0,0,0,0.2);
 }
 
+//animation btn nav
 .menu-btn-burger::after, .menu-btn-burger::before{
   content: "";
   position: absolute;
@@ -318,6 +341,8 @@ html, body{
   transform: rotate(-45deg) translate(35px, 35px);
 }
 
+
+//déroullant
 .accordion {
   background-color: transparent;
   cursor: pointer;
@@ -338,6 +363,7 @@ html, body{
   overflow: hidden;
 }
 
+//titre déroullant
 .accordionTitle{
   margin-bottom: 5px;
   position: absolute;
@@ -345,6 +371,7 @@ html, body{
   top: 15px;
 }
 
+//animation déroullant
 .accordion:hover{
   background-color: transparent;
 }
@@ -381,6 +408,7 @@ html, body{
   content: "-";
 }
 
+//contenu déroullant
 .panel {
   margin-top: 1em;
   padding: 0;
@@ -409,6 +437,8 @@ html, body{
   bottom: 0px;
 }
 
+
+//responsive
 
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
