--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,7 +24,7 @@
             <a href="#"><i class="fab fa-linkedin-in fa-2x"></i></i></a>
             
             </div>
-            <a href="/" id="logo"><img src={{asset ('baby-boy.png')}}></a>
+            <a href="/" id="logo"><img src={{asset ('img/baby-boy.png')}}></a>
             <label id="nav-btn" for="NavToggle">
                 <div class="menu-btn">
                     <div class="menu-btn-burger"></div>
