--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -94,11 +94,11 @@ html, body{
   }
 
   //photo gauche paragraphe
-  .illustration{
+  .illustrationLeft{
     margin: 2em;
     margin-left: 0;
     margin-top: 0;
-    width: 400px;
+    width: 100%;
     height: auto;
     float: left;
     border-radius: 15px;
@@ -108,6 +108,7 @@ html, body{
   p{
     line-height: 20px;
     height: auto;
+    font-size: 1.1em;
     margin-bottom: 2em;
   }
 }
@@ -349,7 +350,7 @@ html, body{
   border: none;
   outline: none;
   height: 43px;
-  width: 250px;
+  width: 280px;
   padding: 0;
   text-align: left;
   border-top: solid 3px black;
@@ -357,7 +358,6 @@ html, body{
   box-shadow: -2px 4px 3px rgba(0, 0, 0, 0.1);
   border-radius: 0 15px 0 0 ;
   font-family: 'Karla', sans-serif;
-  font-size: 1em;
   font-weight: bold;
   position: relative;
   overflow: hidden;
@@ -368,8 +368,11 @@ html, body{
   margin-bottom: 5px;
   position: absolute;
   left: 5px;
-  top: 15px;
+  top: 15px; 
 }
+p.accordionTitle{
+  font-size: 1em;
+} 
 
 //animation déroullant
 .accordion:hover{
@@ -474,6 +477,23 @@ html, body{
 
   .menu-btn{
     margin: 1.5em;
+  }
+
+  .main{
+    //photo gauche paragraphe
+    .illustrationLeft{
+      margin: 2em;
+      margin-left: 0;
+      margin-top: 0;
+      width: auto;
+      height: 280px;
+      float: left;
+      border-radius: 15px;
+      box-shadow: 5px 5px 6px rgba(0,0,0,0.2);
+    }
+    .illustrated{
+      min-height: 280px;
+    }
   }
 }
 
