--- a/templates/pages/Pourquoi.html.twig
+++ b/templates/pages/Pourquoi.html.twig
@@ -20,7 +20,7 @@
 
     <button class="accordion"><p class="accordionTitle">2.	Aider la recherche</p></button>
     <div class="panel">
-        <p>Les cellules souches prélevées dans le sang de cordon vont permettent de développer des activités scientifiques de recherche dans le domaine des cancers du sang et de la thérapie génique. Ainsi grâce à votre don de sang de cordon, les chercheurs peuvent mettre en place des traitements innovants. Lien renvoyant à onglet : Qu’est-ce que le don de sang de cordon « usage scientifique ».
+        <p><img class="illustrationAccordeon" src={{ asset ('img/test_labo.jpeg')}}>Les cellules souches prélevées dans le sang de cordon vont permettent de développer des activités scientifiques de recherche dans le domaine des cancers du sang et de la thérapie génique. Ainsi grâce à votre don de sang de cordon, les chercheurs peuvent mettre en place des traitements innovants. Lien renvoyant à onglet : Qu’est-ce que le don de sang de cordon « usage scientifique ».
 
         Grâce à votre don, on peut produire d’autres types de cellules sanguines ou du sérum ou du plasma. Le cordon ombilical peut être également utilisé pour produire différents types de cellules comme les cellules souches mésenchymateuses, ou les cellules endothéliales par exemple.</p>
     </div>
