--- a/templates/pages/Pourquoi.html.twig
+++ b/templates/pages/Pourquoi.html.twig
@@ -20,7 +20,7 @@
 
     <button class="accordion"><p class="accordionTitle">2.	Aider la recherche</p></button>
     <div class="panel">
-        <p><img class="illustrationAccordeon" src={{ asset ('img/test_labo.jpeg')}}>Les cellules souches prélevées dans le sang de cordon vont permettent de développer des activités scientifiques de recherche dans le domaine des cancers du sang et de la thérapie génique. Ainsi grâce à votre don de sang de cordon, les chercheurs peuvent mettre en place des traitements innovants. Lien renvoyant à onglet : Qu’est-ce que le don de sang de cordon « usage scientifique ».
+        <img class="illustrationAccordeon" src={{ asset ('img/test_labo.jpeg')}}><p>Les cellules souches prélevées dans le sang de cordon vont permettent de développer des activités scientifiques de recherche dans le domaine des cancers du sang et de la thérapie génique. Ainsi grâce à votre don de sang de cordon, les chercheurs peuvent mettre en place des traitements innovants. Lien renvoyant à onglet : Qu’est-ce que le don de sang de cordon « usage scientifique ».
 
         Grâce à votre don, on peut produire d’autres types de cellules sanguines ou du sérum ou du plasma. Le cordon ombilical peut être également utilisé pour produire différents types de cellules comme les cellules souches mésenchymateuses, ou les cellules endothéliales par exemple.</p>
     </div>
@@ -29,8 +29,6 @@
     <div class="panel">
         <p>L’acte de donner son sang de cordon est un acte citoyen, généreux, solidaire, et important qui peut aider de nombreuses personnes dans le besoin. Cette expérience riche s’inscrit dans une dynamique de partage tant pour le donneur que pour le receveur.</p>
     </div>
-
-    {# <img id="test" class="illustration" src={{ asset ('img/test_labo.jpeg')}}> #}
 
     <div class="cadre">
         <h2 class="TitleCadre" >Un prélèvement rapide et indolore</h2>
