--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -14,8 +14,11 @@ html, body{
   margin: 0;
   height: 100%;
   width: 100%;
+  background-color: $fond;
 }
-
+#test{
+  border: solid 3px black;
+}
 // cadrillage page
 .grid{
   background-color: $fond;
@@ -88,16 +91,13 @@ html, body{
     }
     text-align: center;
     margin: 4em 0;
-    padding: 0 2em;
     border-top: solid 3px black;
     border-bottom: solid 3px black;
   }
 
   //photo gauche paragraphe
   .illustrationLeft{
-    margin: 2em;
-    margin-left: 0;
-    margin-top: 0;
+    margin-bottom: 2em;
     width: 100%;
     height: auto;
     float: left;
@@ -164,13 +164,12 @@ html, body{
   grid-area: 1 / 2 / 2 / 3;
   position: relative;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
   height: 100%;
   transform: translateX(0);
   transition: transform 0.25s;
-  border-bottom: solid 3px black;
-  background: $pastel;
 /* 
   &::before {
     content: '';
@@ -185,14 +184,9 @@ html, body{
   }
  */
   #logo{
-    position: absolute;
-    left: 0;
-    bottom: 0;
     height: 100px;
     width: 100px;
     margin: 0;
-    margin-bottom: 1.5em;
-    object-fit: cover;
     img{
       width: 100%;
       height: auto;
@@ -273,31 +267,14 @@ html, body{
 
 //btn menu de nav
 .menu-btn{
-  position: absolute;
-  bottom: 0;
-  right: 0;
   height: 80px;
   width: 80px;
   margin: 0;
-  margin-bottom: 1.5em;
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
   transition: all .5s ease-in-out;
-  #page-nav-toggle{
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    margin: 0;
-    height: 50px;
-    width: 50px;
-    background-color: transparent;
-    opacity: 0.5;
-    cursor: pointer;
-    margin: 1em;
-  }
-  
 }
 
 
@@ -361,6 +338,7 @@ html, body{
   font-weight: bold;
   position: relative;
   overflow: hidden;
+  margin-top: 1em;
 }
 
 //titre déroullant
@@ -423,13 +401,10 @@ p.accordionTitle{
   transition: max-height 0.35s ease-out;
   position: relative;
   p{
-    margin: 0;
-    margin-bottom: 15px;
+    margin: 1em 0;
   }
   .illustrationAccordeon{
-    margin: 2em;
-    margin-left: 0;
-    margin-top: 0;
+    margin: 1em 0;
     width: 100%;
     height: auto;
     float: left;
@@ -473,7 +448,8 @@ p.accordionTitle{
   //contenu déroullant
   .panel {
     .illustrationAccordeon{
-      width: 300px;
+      width: 380px;
+      margin-right: 2.5em;
     }
   }
   
@@ -481,37 +457,43 @@ p.accordionTitle{
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
-  
+  .main{
+    //photo gauche paragraphe
+    .illustrationLeft{
+      margin-right: 2em;
+      margin-bottom: 1em;
+      width: 400px;
+      height: auto;
+      float: left;
+      border-radius: 15px;
+      box-shadow: 5px 5px 6px rgba(0,0,0,0.2);
+    }
+    .illustrated{
+      min-height:290px;
+    }
+  }
 }
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
   .navbar{
     #logo{
+      height: 100px;
+      width: 100px;
       margin: 1.5em;
+    }
+  }
+
+  .main{
+    .cadre{
+      padding: 0 2em;
     }
   }
 
   .menu-btn{
     margin: 1.5em;
   }
-
-  .main{
-    //photo gauche paragraphe
-    .illustrationLeft{
-      margin: 2em;
-      margin-left: 0;
-      margin-top: 0;
-      width: auto;
-      height: 280px;
-      float: left;
-      border-radius: 15px;
-      box-shadow: 5px 5px 6px rgba(0,0,0,0.2);
-    }
-    .illustrated{
-      min-height: 280px;
-    }
-  }
+  
 }
 
 // X-Large devices (large desktops, 1200px and up)
@@ -526,9 +508,6 @@ p.accordionTitle{
     display: block;
     transform: translateX(0);
     z-index: 0;
-    #logo{
-      left: 0;
-    }
     .network{
       display: block;
       position: absolute;
@@ -543,6 +522,11 @@ p.accordionTitle{
       a:hover{
         color: rgba(0, 0, 0, 0.5);
       }
+    }
+
+    #logo{
+      position: absolute;
+      left: 0;
     }
     ul{
       display: block;
