--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -15,6 +15,7 @@ html, body{
   height: 100%;
   width: 100%;
   background-color: $fond;
+  overflow-x: hidden;
 }
 #test{
   border: solid 3px black;
@@ -168,25 +169,26 @@ html, body{
   align-items: center;
   width: 100%;
   height: 100%;
-  transform: translateX(0);
-  transition: transform 0.25s;
-/* 
+  transform: translateX(-100vw);
+  transition: transform 0.35s;
+  background-color: blue;
+ 
   &::before {
     content: '';
     position: absolute;
     top: 0;
-    left: 0;
+    right: 0;
     width: 100%;
     height: 100%;
     background-color: $pastel;
-    transform-origin: 0 50%;
     z-index: -1;
   }
- */
+ 
   #logo{
     height: 100px;
     width: 100px;
     margin: 0;
+    transform: translateX(-100vw);
     img{
       width: 100%;
       height: auto;
@@ -230,33 +232,68 @@ html, body{
 //affichage menu navigation
 #NavToggle{
   display: none;
-}
-#NavToggle:checked {
-  display: none;
   
-  ~ .main{
-    transform: translateX(-10%);
-    transition: all .35s ease-in-out;
-  }
-  
-   ~ .navbar {
-    grid-area: 1 / 1 / 4 / 4;
+  ~ .navbar {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     transition-duration: 0.35s;
-    transform: translateX(0);
+    transform: translateX(100vw);
+    transition: transform .35s ease-in-out;
     align-items: flex-start;
     background: $pastel;
     z-index: 1;
     #nav-btn{
       z-index: 2;
       .menu-btn{
-        transform: translateX(0);
-        transition-duration: 0s;
+        position: fixed;
+        right: 0;
+        margin-top: 35px;
+        transform: translateX(-100vw);
+        transition: transform .35s ease-in-out;
         top: 0;
       }
     }
+  }
+}
+#NavToggle:checked {
+  display: none;
 
+  ~ html, body{
+    overflow: hidden;
+  }
+  ~ .main{
+    transform: translateX(-10%);
+    transition: all .35s ease-in-out;
+  }
+
+  ~ .navbar::before{
+    padding: 12% 0;
+    position: relative;
+    background-color: $pastel;
+    overflow-y: hidden;
+  }
+  
+  ~ .navbar {
+    grid-area: 1 / 1 / 4 / 4;
+    width: 100%;
+    height: 100vh;
+    transition-duration: 0.35s;
+    transform: translateX(0);
+    transition: transform .35s ease-in-out;
+    align-items: flex-start;
+    background: $pastel;
+    z-index: 1;
+    #nav-btn{
+      z-index: 2;
+      .menu-btn{
+        position: fixed;
+        right: 12%;
+        margin-top: 35px;
+        transform: translateX(0);
+        transition: transform .35s ease-in-out;
+        top: 0;
+      }
+    }
     #logo{
       display: none;
     }
@@ -275,6 +312,7 @@ html, body{
   align-items: center;
   cursor: pointer;
   transition: all .5s ease-in-out;
+  transform: translateX(-100vw);
 }
 
 
@@ -506,12 +544,13 @@ p.accordionTitle{
 
   .navbar{
     display: block;
-    transform: translateX(0);
+    transform: translateX(100vw);
     z-index: 0;
     .network{
       display: block;
       position: absolute;
       right: 0;
+      transform: translateX(-100vw);
       a{
         color: black;
         i{
@@ -525,10 +564,12 @@ p.accordionTitle{
     }
 
     #logo{
+      transform: translateX(-100vw);
       position: absolute;
       left: 0;
     }
     ul{
+      transform: translateX(-100vw);
       display: block;
       position: absolute;
       bottom: 0;
