--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -17,9 +17,7 @@ html, body{
   background-color: $fond;
   overflow-x: hidden;
 }
-#test{
-  border: solid 3px black;
-}
+
 // cadrillage page
 .grid{
   background-color: $fond;
@@ -171,26 +169,15 @@ html, body{
   height: 100%;
   transform: translateX(-100vw);
   transition: transform 0.35s;
-  background-color: blue;
- 
-  &::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    background-color: $pastel;
-    z-index: -1;
-  }
  
   #logo{
     height: 100px;
     width: 100px;
-    margin: 0;
+    margin: 1.5em;
+    margin-left: 0;
     transform: translateX(-100vw);
     img{
-      width: 100%;
+      width: 100px;
       height: auto;
     }
   }
@@ -201,31 +188,14 @@ html, body{
   }
 
   //liens de navigation
-  ul{
-    display: none;
+  .menuItems{
     width: 100%;
-    li {
-      display: flex;
-      align-items: center;
-      position: relative;
-      overflow: hidden;
-      /* 
-      &::before {
-        content: '';
-        position: absolute;
-        bottom: 0;
-        right: 0;
-        width: 100%;
-        height: 1vmin;
-        background-color: $pastel;
-        transform-origin: 0 50%;
-        transform: translateX(112%) skew(15deg);
-      } */
-    }
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
-
-  
-
 }
 
 
@@ -234,8 +204,10 @@ html, body{
   display: none;
   
   ~ .navbar {
+    grid-area: 1 / 1 / 4 / 4;
+    height: 100vh;
     width: 100%;
-    height: 100%;
+    padding: 0 12%;
     transition-duration: 0.35s;
     transform: translateX(100vw);
     transition: transform .35s ease-in-out;
@@ -245,8 +217,9 @@ html, body{
     #nav-btn{
       z-index: 2;
       .menu-btn{
+        grid-area: 1 / 2 / 2 / 3;
         position: fixed;
-        right: 0;
+        right: 12%;
         margin-top: 35px;
         transform: translateX(-100vw);
         transition: transform .35s ease-in-out;
@@ -258,19 +231,12 @@ html, body{
 #NavToggle:checked {
   display: none;
 
-  ~ html, body{
+  ~ html{
     overflow: hidden;
   }
   ~ .main{
     transform: translateX(-10%);
     transition: all .35s ease-in-out;
-  }
-
-  ~ .navbar::before{
-    padding: 12% 0;
-    position: relative;
-    background-color: $pastel;
-    overflow-y: hidden;
   }
   
   ~ .navbar {
@@ -297,7 +263,6 @@ html, body{
     #logo{
       display: none;
     }
-  
   }
 }
 
@@ -518,7 +483,6 @@ p.accordionTitle{
     #logo{
       height: 100px;
       width: 100px;
-      margin: 1.5em;
     }
   }
 
@@ -543,13 +507,12 @@ p.accordionTitle{
   }
 
   .navbar{
-    display: block;
     transform: translateX(100vw);
     z-index: 0;
     .network{
       display: block;
       position: absolute;
-      right: 0;
+      right: 12%;
       transform: translateX(-100vw);
       a{
         color: black;
@@ -566,14 +529,14 @@ p.accordionTitle{
     #logo{
       transform: translateX(-100vw);
       position: absolute;
-      left: 0;
+      left: 12%;
     }
-    ul{
+    .menuItems{
       transform: translateX(-100vw);
       display: block;
       position: absolute;
-      bottom: 0;
-      right: 0;
+      top: 89px;
+      right: 12%;
       padding: 0;
       margin: 0;
       list-style: none;
