--- a/templates/pages/Pourquoi.html.twig
+++ b/templates/pages/Pourquoi.html.twig
@@ -1,7 +1,7 @@
 {% extends "base.html.twig" %}
 
 
-{% block title %}Quand{% endblock %}
+{% block title %}Pourquoi donner ?{% endblock %}
 
 
 {% block stylesheets %}
