--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri&display=swap" rel="stylesheet">
  
     </head>
-    <body>
+    <body class="body">
         
         <div class="grid">
             <input id="NavToggle" type="checkbox">
@@ -65,43 +65,12 @@
         
         <!--fontAwesome--> 
         <script src="https://kit.fontawesome.com/695ef1a9d2.js" crossorigin="anonymous"></script>
+
+        {{ encore_entry_script_tags('js/base') }}
+
+        {% block javascripts %}
+            
+        {% endblock %}
     </body>
     
-    <script>
-    // accordéons
-    var acc = document.getElementsByClassName("accordion");
-    var i;
-
-    for (i = 0; i < acc.length; i++) {
-    acc[i].addEventListener("click", function() {
-        this.classList.toggle("active");
-        var panel = this.nextElementSibling;
-        if (panel.style.maxHeight) {
-        panel.style.maxHeight = null;
-        } else {
-        panel.style.maxHeight = panel.scrollHeight + "px";
-        } 
-    });
-    }
-    // fin accordéons
-    </script>
-
-    <script>
-    //btn menu burger
-    const menuBtn  = document.querySelector('.menu-btn');
-    let menuOpen = false;
-    document.querySelector('#NavToggle').addEventListener('change', ()=> {
-        if(!menuOpen){
-            menuBtn.classList.add('open');
-            menuOpen = true;
-        } else {
-            menuBtn.classList.remove('open');
-            menuOpen = false;
-        }
-    });
-    // fin btn menu burger
-    </script>
-    {% block javascripts %}
-        {#{{ encore_entry_script_tags('app') }}#}
-    {% endblock %}
 </html>
