--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -160,16 +160,17 @@ html, body{
 
 //navigation header
 .navbar{
-  grid-area: 1 / 2 / 2 / 3;
+  grid-area: 1 / 1 / 4 / 4;
+  height: 100vh;
+  width: 100%;
+  padding: 0 12%;
+  transition: transform .35s ease-in-out;
+  align-items: flex-start;
+  background: $pastel;
+  z-index: 1;
   position: relative;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  transform: translateX(-100vw);
-  transition: transform 0.35s;
- 
   #logo{
     height: 100px;
     width: 100px;
@@ -217,16 +218,8 @@ html, body{
   display: none;
   
   ~ .navbar {
-    grid-area: 1 / 1 / 4 / 4;
-    height: 100vh;
-    width: 100%;
-    padding: 0 12%;
     transition-duration: 0.35s;
     transform: translateX(100vw);
-    transition: transform .35s ease-in-out;
-    align-items: flex-start;
-    background: $pastel;
-    z-index: 1;
     #nav-btn{
       z-index: 2;
       .menu-btn{
@@ -250,15 +243,8 @@ html, body{
   }
   
   ~ .navbar {
-    grid-area: 1 / 1 / 4 / 4;
-    width: 100%;
-    height: 100vh;
-    transition-duration: 0.35s;
     transform: translateX(0);
-    transition: transform .35s ease-in-out;
     align-items: flex-start;
-    background: $pastel;
-    z-index: 1;
     #nav-btn{
       z-index: 2;
       .menu-btn{
@@ -535,7 +521,9 @@ p.accordionTitle{
   }
 
   .navbar{
-    transform: translateX(100vw);
+    position: relative;
+    width: 100%;
+    height: 100%;
     z-index: 0;
     .network{
       display: block;
