--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -191,20 +191,33 @@ html, body{
   //liens de navigation
   .menuItems{
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: flex-start;
+    justify-content: center;
+    margin-top: 2em;
     li{
       list-style: none;
       margin-left: 15%;
-      margin-top: 1em;
+      margin-bottom: 2.5em;
       a{
         font-family: 'Karla', sans-serif;
-        font-size: 1.5em;
+        font-size: 1.25em;
         text-decoration: none;
         color: $fond;
+        position: relative;
+      }
+      a::before{
+        content: "";
+        position: absolute;
+        border-radius: 0 0 0 15px ;
+        border-bottom: solid 3px $fond;
+        border-left:solid 3px $fond;
+        left: -0.5em;
+        right: 0;
+        top: 0;
+        bottom: -0.5em;
       }
     }
   }
@@ -435,7 +448,15 @@ p.accordionTitle{
   p.accordionTitle{
     font-size: 1em;
   } 
-  
+  .navbar{
+    .menuItems{
+      li{
+        a{
+          font-size: 1.5em;
+        }
+      }
+    }
+  }
 }
 
 // Small devices (landscape phones, 576px and up)
@@ -460,6 +481,17 @@ p.accordionTitle{
     .illustrationAccordeon{
       width: 380px;
       margin-right: calc(768px - 380px - 12% - 1em);
+    }
+  }
+
+  .navbar{
+    .menuItems{
+      li{
+        margin-bottom: 3.5em;
+        a{
+          font-size: 2em;
+        }
+      }
     }
   }
   
@@ -569,6 +601,8 @@ p.accordionTitle{
           color: black;
           text-decoration: none;
           padding-bottom: 4px;
+          margin: 0;
+          height: 33px;
         }
        a:before {    
           content: "";
@@ -577,6 +611,8 @@ p.accordionTitle{
           position: absolute;
           background:$fond;
           bottom: 0;
+          top: auto;
+          left: 0;
           width: 100%;
           transition: transform 0.35s ease-out;
           transform-origin: bottom right;
@@ -585,6 +621,9 @@ p.accordionTitle{
         a:hover:before { 
           transform: scaleX(1);
           transform-origin: bottom left; 
+        }
+        a:after{
+          display: none;
         }
       }
     }
