--- a/templates/pages/Pourquoi.html.twig
+++ b/templates/pages/Pourquoi.html.twig
@@ -41,6 +41,25 @@
     <h1>Les principes du don de sang de cordon</h1>
     <h2>Un acte bénévole et solidaire</h2>
     <p>Votre don de sang de cordon peut sauver des vies et redonner espoir au personnes atteintes de maladies graves. Vous êtes libre de réaliser ou non ce don. C’est un acte bénévole, aucune indemnité ni compensation financière ne vous sera versées. Si vous acceptez le principe, vous pourrez alors en discuter avec une personne du corps médical de votre choix afin d’avoir toutes les explications que vous désirez. A la suite de de cet entretien, une fiche informative vous sera remise ainsi que le document de consentement.</p>
+    <h2>Un acte anonyme</h2>
+    <p>Lorsque le prélèvement sera effectué, il sera envoyé à l’EFS qui se chargera de l’anonymisation avant de le céder à LYMPHOBANK, ainsi LYMPHOBANK n’aura en aucun cas accès aux données identifiantes vous concernant ou concernant votre enfant, qu’il s’agisse de données directement identifiantes (nom, prénom, coordonnées…) ou indirectement identifiantes (date de naissance, sexe, groupe sanguin…)</p>
+    <h2>Un acte gratuit</h2>
+    <p>Le don de sang de cordon est gratuit, c’est-à-dire qu’aucun frais lié au prélèvement du sang de cordon ne sera à la charge de la mère, et aucune indemnité ni compensation ne lui sera versée.</p>
+    <h2>Un acte consenti</h2>
+    <p>Vous êtes libre de donner ou non votre sang de cordon. Si vous êtes d’accord un document de consentement vous sera remis par votre médecin. Ce document sera imprimé en 3 exemplaires : pour vous-même, la maternité partenaire et l’EFS. </p>
+    <button class="accordion"><p class="accordionTitle">Avant la réalisation du prélèvement</p></button>
+    <div class="panel">
+        <p>vous pouvez retirer à tout moment votre consentement sans aucune justification de votre part et cela ne changera pas votre prise en charge et celle du votre bébé.</p>
+    </div>
+    <button class="accordion"><p class="accordionTitle">Après la réalisation du prélèvement </p></button>
+    <div class="panel">
+        <p>si vous souhaitez demander la destruction des produits en stock conservés par LYMPHOBANK, aucune justification ne vous sera demandée. Pour ce faire, il vous suffira de vous adresser à l’EFS qui transmettra votre requête à LYMPHOBANK. LYMPHOBANK vous transmettra alors, via l’EFS, un certificat de destruction. Compte tenu du processus d’anonymisation, il est inutile d’adresser votre requête directement à LBK qui n’a pas accès à vos données identifiantes et ne pourra donc pas y répondre. En revanche, il n’est plus possible de réaliser la destruction des produits après que ceux-ci ait été cédés à un laboratoire de recherche.</p>
+    </div>
+    <h2>Le non-profit</h2>
+    <p>LYMPHOBANK ne tire aucun profit personnel sur les dons de sang placentaire récoltés. Les bénéfices liés au don de sang sont intégralement réinvestis dans la start-up. Conformément à notre Charte d’engagement (disponible sur <a href="www.lymphobank.fr">www.lymphobank.fr</a> ), les bénéfices réalisés ne sont pas redistribués à la Direction, au personnel ou aux éventuels investisseurs de la société, sous quelque forme que ce soit. Un comité de surveillance constitué de représentants de l’EFS et de la Fédération
+    Française pour le Don de Sang Bénévole a accès aux comptes de résultat de la start-up et peut réaliser des audits comptables afin de s’assurer du respect de ses engagements.
+    Ainsi, nos partenaires sont les utilisateurs finaux, ils ont l’interdiction de revendre les cellules fournies à un intermédiaires sans y avoir apporter une valeur ajoutée. 
+    </p>
 
 {% endblock %}
 
