--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -438,6 +438,26 @@ p.accordionTitle{
 }
 
 
+//cards
+.card{
+  height: 600px;
+  width: 300px;
+  border-radius: 15px;
+  border: 1px solid rgba(0,0,0,0.2);
+  box-shadow: 2px 2px 3px rgba(0,0,0,0.2);
+  .card-pic{
+    img{
+      border-radius: 15px 15px 0 0;
+      width: 298px;
+      height: auto;
+    }
+  }
+  .card-title{
+    margin-left: .5em;
+  }
+}
+
+
 //responsive
 
 // X-Small devices (portrait phones, 360px and up)
