--- a/templates/pages/Pourquoi.html.twig
+++ b/templates/pages/Pourquoi.html.twig
@@ -10,7 +10,7 @@
 
 {% block body %}
 
-    <p id="titlePage">Le don de cellules souches hématopoïétiques issue du sang de cordon ombilical apparaît comme alternative à la greffe de moelle osseuse, puisqu’il s’agit d’une source différente de cellules souches qui détient les mêmes spécificités et qui permet d’être moins invasive (prélèvement indolore) et qui reçoit une meilleure tolérance du receveur réduisant ainsi les possibilités de réactions immunitaires.</p>
+    <p class="titlePage">Le don de cellules souches hématopoïétiques issue du sang de cordon ombilical apparaît comme alternative à la greffe de moelle osseuse, puisqu’il s’agit d’une source différente de cellules souches qui détient les mêmes spécificités et qui permet d’être moins invasive (prélèvement indolore) et qui reçoit une meilleure tolérance du receveur réduisant ainsi les possibilités de réactions immunitaires.</p>
 
     <h1>Pourquoi faire un don de sang de cordon ?</h1>
     <button class="accordion"><p class="accordionTitle">1.  Sauver des vies</p></button>
