--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block body %}
-    <p>Le sang de cordon provient du placenta (d’où l’appellation également rencontrée « sang placentaire »). Le cordon ombilical contient un sang particulièrement riche en cellules souches hématopoïétiques . 
+    <p class="pageTitle">Le sang de cordon provient du placenta (d’où l’appellation également rencontrée « sang placentaire »). Le cordon ombilical contient un sang particulièrement riche en cellules souches hématopoïétiques . 
     Le don de sang placentaire est un acte gratuit, anonyme et volontaire. 
     Cet acte se produit lors de l’accouchement, immédiatement après la naissance de l’enfant et une fois le cordon coupé, on prélève le sang issu du cordon ombilical. 
     Une fois le prélèvement réalisé, il sera traité et stocké par LYMPHOBANK puis envoyé aux laboratoires de recherche partenaires français dans le but d’être utilisé pour faire avancer la recherche.
