--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -32,26 +32,38 @@
     <div class="cardsHosto">
         <div class="card">
             <div class="card-pic">
-                <img src={{ asset ('img/hosto_icon.jpg')}}>
+                <img src={{ asset ('img/hospital.png')}}>
             </div>
             <div class="card-title"><h2>Maternité qui ne prélève pas de SDC</h2></div>
+            <button class="btnCard"><p>En savoir plus</p></button>
+            <div class="panelCard">
+                <p>Un texte explicatif <br> à fairevxdvsdvsdvsvxvsxd vdvcsdv vsdvsd</p>
+            </div>
         </div>
         <div class="card">
             <div class="card-pic">
-                <img src={{ asset ('img/hosto_icon.jpg')}}>
+                <img src={{ asset ('img/hospital.png')}}>
             </div>
             <div class="card-title"><h2>Maternité qui prélève le SDC pour usage thérapeutique</h2></div>
+            <button class="btnCard"><p>En savoir plus</p></button>
+            <div class="panelCard">
+                <p>Un schéma explicatif à faire dsxvpsdkjvpsdpv également d’autres rôles : traiter intensivement les cellules cancéreuses restantes, diminuant ainsi la probabilité d’un retour de la maladie, d’inactiver le système immunitaire pour réduire les probabilités de rejet du greffon, de permettre aux cellules du donneur de se rendre à la moelle osseuse, où elles produiront des cellules sanguines et activeront l’effet du greffon con</p>
+            </div>
         </div>
         <div class="card">
             <div class="card-pic">
-                <img src={{ asset ('img/hosto_icon.jpg')}}>
+                <img src={{ asset ('img/hospital.png')}}>
             </div>
             <div class="card-title"><h2>Maternité qui prélève le SDC pour usage scientifique </h2></div>
+            <button class="btnCard"><p>En savoir plus</p></button>
+            <div class="panelCard">
+                <p>Un schéma explicatif <br> à faire</p>
+            </div>
         </div>
     </div>
     
 
 {% endblock %}
-$
+
 {% block javascripts %}{% endblock %}
 
