--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -39,6 +39,10 @@
                     <a href={{ path ('gestion_actus')}} class="nav-link"><i class="far fa-newspaper"></i>actualités</a>
                 </li>
                 <hr class="sidebar-divider my-0">
+                <li>
+                    <a href={{ path ('gestion_faq')}} class="nav-link"><i class="far fa-newspaper"></i>F.A.Q</a>
+                </li>
+                <hr class="sidebar-divider my-0">
                 
             </ul>
         </div>
