--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -40,7 +40,7 @@
                 </li>
                 <hr class="sidebar-divider my-0">
                 <li>
-                    <a href={{ path ('gestion_faq')}} class="nav-link"><i class="far fa-newspaper"></i>F.A.Q</a>
+                    <a href={{ path ('gestion_faqs')}} class="nav-link"><i class="far fa-question-circle"></i>F.A.Q</a>
                 </li>
                 <hr class="sidebar-divider my-0">
                 
