--- a/templates/admin/faqs/ShowFaq.html.twig
+++ b/templates/admin/faqs/ShowFaq.html.twig
@@ -8,17 +8,18 @@
 {% block body %}
     <div class="container">
 
-        <!-- creer témoignage-->
+        <!-- creer question-->
         <a class="btn btn-outline-primary" href={{ path ('create_faq')}}>
-            <i class="fas fa-plus"></i>Créer un témoignage
+            <i class="fas fa-plus"></i>Créer une question
         </a>
-        <!-- /creer témoignage-->
+        <!-- /creer question-->
 
         <table class="table table-striped">
             <thead>
                 <tr>
-                <th scope="col">Témoin</th>
-                <th scope="col">Métier du témoin</th>
+                <th scope="col">Question</th>
+                <th scope="col">Ordre</th>
+                <th scope="col">lien</th>
                 <th scope="col">Modifier</th>
                 <th scope="col">Supprimer</th>
                 </tr>
